# i18ncpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: ci.yml
.paul/: MILESTONES.md  PROJECT.md  REVIEW-2026-04-11.md  ROADMAP.md  STATE.md  paul.json
.paul/milestones/: v0.3.0-ROADMAP.md  v0.4.0-ROADMAP.md  v0.4.2-ROADMAP.md
.paul/phases/01-benchmarks/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/01-boundary-correctness/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/01-correctness/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/01-cpp20-migration/: 01-01-PLAN.md  01-01-SUMMARY.md
.paul/phases/01-tests/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
.paul/phases/02-concurrency-invariants/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/02-flat-storage/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/02-portability/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/02-transparent-hash/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/02-zero-copy-move/: 02-01-PLAN.md  02-01-SUMMARY.md
.paul/phases/03-adversarial-tests/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/03-allocation-optimization/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/03-format-constexpr/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/03-formatting-cache/: 03-01-PLAN.md  03-01-SUMMARY.md
.paul/phases/04-api-modernization/: 04-01-PLAN.md  04-01-SUMMARY.md
.paul/phases/04-caching-compile-time/: 04-01-PLAN.md  04-01-SUMMARY.md
.paul/phases/04-infra-docs/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.paul/phases/05-profiling-validation/: 05-01-PLAN.md  05-01-SUMMARY.md
.paul/phases/06-regex-replacement/: 06-01-PLAN.md  06-01-SUMMARY.md
benchmarks/: BASELINE.md  CMakeLists.txt  bench_formatting.cpp  bench_harness.h  bench_interpolation.cpp  bench_lookup.cpp
include/: i18ncpp.h
src/: i18ncpp.cpp
tests/: CMakeLists.txt  test_bool_conversion.cpp  test_cache_invariant.cpp  test_format_cache.cpp  test_format_isolation.cpp  test_formatting.cpp  test_hostile_input.cpp  test_interpolation.cpp  test_key_exists.cpp  test_load_replace.cpp  test_locale_mgmt.cpp  test_plural.cpp  test_thread_safety.cpp  test_translation.cpp
tests/fixtures/: ar.json  cs.json  en.json  formats_wrong_type.json  fr.json  merge_extra.json  pl.json  ru.json
tests/fixtures/hostile/: leaf_is_int.json  malformed_json.json  not_an_object.json
